--- a/stranice/kontakt.html
+++ b/stranice/kontakt.html
@@ -31,6 +31,13 @@
     
 <h2>Kontaktirajate nas :</h2>
 <br><hr><br>
+    <p>Ukoliko imate bilo kakvih pitanja mozete nas konaktirati ovde ili putem naših društvenih mreža</p>
+
+    <ul>
+        <li> <a href="https://www.facebook.com/"> Facebook </a> </li>
+        <li> <a href="https://www.instagram.com/"> Instagram </a> </li>
+        <li> <a href="https://www.twitter.com/"> Twitter</a> </li>
+    </ul>
 
 <form action="">
     <p>Ime:</p>
