--- a/stranice/usluge.html
+++ b/stranice/usluge.html
@@ -100,11 +100,16 @@
         <input type="checkbox" name="tip"> Mali <br>
         <input type="checkbox" name="tip"> Veliki <br>
 
+    
+         <p>Rezervisi datum:</p>
+        <input type="date" name="datum">
+    </form>
+
 
 
         <br><br>
 
-        <input type="submit" value="Poruci">
+        <input type="submit" value="Rezervisi">
         <input type="reset" value="Poništi">
 
     </form>
