--- a/stranice/kontakt.html
+++ b/stranice/kontakt.html
@@ -31,7 +31,7 @@
     
 <h2>Kontaktirajate nas :</h2>
 <br><hr><br>
-    <p>Ukoliko imate bilo kakvih pitanja mozete nas konaktirati ovde ili putem naših društvenih mreža</p>
+    <p>Ukoliko imate bilo kakvih pitanja možete nas kontaktirati ovde ili putem naših društvenih mreža: </p>
 
     <ul>
         <li> <a href="https://www.facebook.com/"> Facebook </a> </li>
@@ -40,17 +40,13 @@
     </ul>
 
 <form action="">
-    <p>Ime:</p>
-    <input type="text" name="ime" placeholder="Veljko">
-    <p>prezime: </p>
-    <input type="text" name="prezime" placeholder="Belivuk">
-    <p>telefon : </p>
-    <input type="tel" name="telfon" placeholder="063 123 4567" required>
-    <p>email: </p>
+    <p>Ime i Prezime:</p>
+    <input type="text" name="ime" placeholder="Veljko Belivuk" required>
+    <p>Email: </p>
     <input type="email" name="email" placeholder="marko.miljkovic@gmail.com" required>
-    <p>vasa poruka: </p>
+    <p>Vasa poruka: </p>
     <textarea name="poruka" cols="35" rows="15"></textarea>
-    <br><input type="submit">
+    <br><input type="submit" value="Posalji Poruku">
 </form>
 
 </body>
